...
          </View>
          <Text style={[TextStyles.h2]}>Shalom</Text>
        </View>

        {/* Form */}
        <View style={styles.form}>
          <Text style={[TextStyles.h3]}>Login to your Account</Text>

          {/* Email */}
          <CustomTextInput
            value={email}
            onChangeText={setEmail}
            placeholder="Email"
            keyboardType="email-address"
            autoCapitalize="none"
            returnKeyType="next"
          />

          {/* Password */}
          <CustomTextInput
            value={password}
            onChangeText={setPassword}
            placeholder="Password"
            secureTextEntry={true}
            showPassword={showPassword}
            onTogglePassword={() => setShowPassword(!showPassword)}
            eyeIconStyle={styles.eyeIcon}
            warningText={loginWarning}
            returnKeyType="go"
...

          {/* Sign In Button */}
          <ActionButton
            onPress={handleLogin}
            disabled={loading}
            loading={loading}
            text={loading ? "Signing In..." : "Sign In"}
          />

          <View
            style={{
              alignItems: "center",
              flexDirection: "row",
...
