import type { NavigatorScreenParams } from '@react-navigation/native';
import type { Certificate } from '@/utils/certificate';

export type CourseDetailSourceScreen = "Home" | "Courses" | "MyCourses";

export type MainStackParamList = {
  MainTabs: NavigatorScreenParams<BottomTabNavParamList>;
  CourseDetail: { courseId: string; sourceScreen?: CourseDetailSourceScreen };
  ModuleDetail: {
    courseId: string;
...
  ConversationProfile: { conversation: { id: string | number; name: string; avatar_url?: string } };
};

export type BottomTabNavParamList = {
  Home: undefined;
  Courses: undefined;
  Notifications: undefined;
  Profile: undefined;
  Messages: undefined;
  Admin?: undefined;
};

export type RootStackParamList = {
  Main: undefined;
  Auth: undefined;
...
