...
    return `Module ${modules > 0 ? 1 : 0}`;
  };

  if (!user) {
    return (
      <Screen
        title="My Courses"
        navigation={navigation}
        headerLeftIcon="chevron-back"
        stickyHeader
      >
        <View style={styles.centerContainer}>
          <Text style={TextStyles.body}>
...
